fix: print column names instead of data

--- a/balance-profit-analyzer.ipynb
+++ b/balance-profit-analyzer.ipynb
@@ -11,16 +11,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Transaction Date ', 'Description ', 'Debit ', 'Credit ',\n",
+      "       'Available Balance '],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "# Read CSV file\n",
     "file_name: str = \"Account Statement 2023-2024.CSV\"\n",
     "df = pd.read_csv(file_name)\n",
     "\n",
-    "# Print first 2 rows of bank statement\n",
-    "print(df.head(1))"
+    "# Print columns of bank statement\n",
+    "print(df.columns)"
    ]
   }
  ],
